# rust-onitama

./: .gitignore  Cargo.toml  Dockerfile  README.md
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.js  backend.js
client/src/assets/css/: elements.sass  main.sass  panels.sass  variables.sass  views.sass
client/src/components/panels/: Card.js  Cell.js  Field.js  Player.js  StandardButton.js
client/src/components/views/: Dialog.js  Game.js  GameOverDialog.js  Operate.js  WelcomeDialog.js
client/src/context/: AppContext.js
src/: api.rs  card.rs  cell.rs  cli.rs  db.rs  field.rs  game.rs  gameserver.rs  main.rs  moveOption.rs  move_option.rs  piece.rs  player.rs  position.rs
