[package]
name = "onitama"
version = "0.1.0"
authors = ["simon <epic.fail6174@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
rusqlite = { version = "0.24.0", features = ["bundled"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "gameserver"
path = "src/gameserver.rs"
